PRACTICE 6: refactor code