@@ -11,7 +11,6 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -32,7 +31,7 @@ public class PublisherServiceImpl implements PublisherService {
 
         return publishers.stream()
                 .map(publisherMapper::toPublisherDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
